fixed z-index of header

--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,7 @@ header {
   left: 0;
   right: 0;
   justify-content: space-between;
+  z-index: 100;
 }
 
 .left-section {
